<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project0_title">My Nanodegree Apps!</string>

    <string name="btn_spotify_streamer">Spotify Streamer</string>
    <string name="btn_scores_app">Scores App</string>
    <string name="btn_library_app">Library App</string>
    <string name="btn_build_it_bigger">Build It Bigger</string>
    <string name="btn_xyz_reader">XYZ Reader</string>
    <string name="btn_capstone">Capstone: My Own App</string>
</resources>
