<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_activity_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/project0_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        style="@style/buttons"
        android:layout_marginTop="20dp"
        android:onClick="spotifyStreamer"
        android:text="@string/btn_spotify_streamer" />

    <Button
        android:id="@+id/btn_scores_app"
        style="@style/buttons"
        android:layout_marginTop="@dimen/project0_button_margins"
        android:onClick="scoresApp"
        android:text="@string/btn_scores_app" />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/buttons"
        android:layout_marginTop="@dimen/project0_button_margins"
        android:onClick="libraryApp"
        android:text="@string/btn_library_app" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/buttons"
        android:layout_marginTop="@dimen/project0_button_margins"
        android:onClick="buildItBigger"
        android:text="@string/btn_build_it_bigger" />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/buttons"
        android:layout_marginTop="@dimen/project0_button_margins"
        android:onClick="xyzReader"
        android:text="@string/btn_xyz_reader" />

    <Button
        android:id="@+id/btn_capstone"
        style="@style/button_capstone"
        android:layout_marginTop="@dimen/project0_button_margins"
        android:onClick="capstone"
        android:text="@string/btn_capstone" />
</LinearLayout>
